[package]
name = "locd"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-broker = { path = "../copernica/copernica-broker" }
copernica-clients = { path = "../copernica/copernica-clients" }
copernica-protocols = { path = "../copernica/copernica-protocols" }
copernica-services = { path = "../copernica/copernica-services" }
copernica-links = { path = "../copernica/copernica-links" }
copernica-common = { path = "../copernica/copernica-common" }
copernica-identity = { path = "../copernica/copernica-identity" }
copernica-tests = { path = "../copernica/copernica-tests" }
crossbeam = "0.7"
crossbeam-channel = "0.3"
bincode = "1.3"
log = "0.4"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"
async-std = "1.4.0"
anyhow = "1.0"
sled = "0.32.0"
reed-solomon = "0.2"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
sha3 = "0.8.2"
