[package]
name = "locd"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-broker = { path = "../copernica/copernica-broker" }
copernica-protocols = { path = "../copernica/copernica-protocols" }
copernica-services = { path = "../copernica/copernica-services" }
copernica-links = { path = "../copernica/copernica-links" }
copernica-common = { path = "../copernica/copernica-common" }
copernica-tests = { path = "../copernica/copernica-tests" }
bincode = "1.3"
log = "0.4"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
async-std = "1.4.0"
anyhow = "1.0"
rand_chacha = "0.2.2"
rand = "0.8.3"
rand_core = "0.6.1"
cryptoxide = "0.3.2"
sm = "0.9.0"
futures-lite = "1.11.3"
futures = "0.3.12"
async-executor = "1.4.1"
packtool = "0.1.0"
